# veil

./: .gitignore  LICENSE  README.md  SECURITY_AUDIT.md  STATUS.md  problem_statement.md
docs/: .env.example  PROTOCOL_CAPABILITIES.md  STRATEGY.md  next.config.mjs  package-lock.json  package.json  problem_statement.md  theme.config.tsx  user_persona.md
docs/app/: layout.tsx
docs/content/: _meta.ts  (+5 more)
programs/: Cargo.toml
programs/src/: entrypoint.rs  errors.rs  lib.rs  math.rs
programs/src/fhe/: context.rs  graph_builder.rs  graphs.rs  mod.rs  types.rs
programs/src/ika/: mod.rs
programs/src/instructions/: borrow.rs  collect_fees.rs  cross_borrow.rs  cross_liquidate.rs  cross_repay.rs  cross_withdraw.rs  deposit.rs  enable_privacy.rs  flash_borrow.rs  flash_repay.rs  ika_register.rs  ika_release.rs  ika_sign.rs  init_position.rs  initialize.rs  liquidate.rs  mock_fees.rs  mock_oracle.rs  mod.rs  pause_pool.rs  private_borrow.rs  private_deposit.rs  private_repay.rs  private_withdraw.rs  repay.rs  resume_pool.rs  set_ika_cap.rs  set_pool_decimals.rs  update_oracle_price.rs  update_pool.rs  withdraw.rs
programs/src/pyth/: mod.rs
programs/src/state/: encrypted_position.rs  ika_position.rs  lending_pool.rs  liquidity_pool.rs  mod.rs  treasury.rs  user_position.rs
programs/src/unit_tests/: fhe_graphs.rs  ika.rs  instructions_borrow.rs  instructions_collect_fees.rs  instructions_cross_borrow.rs  instructions_cross_liquidate.rs  instructions_cross_repay.rs  instructions_cross_withdraw.rs  instructions_deposit.rs  instructions_liquidate.rs  instructions_withdraw.rs  math.rs  mod.rs  state_encrypted_position.rs  state_ika_position.rs  state_lending_pool.rs  state_user_position.rs
programs/tests/: account_state_and_entrypoint.rs  instruction_parsing.rs  protocol_tests.rs  scenarios.rs  scenarios_ika_encrypt.rs
programs/tests/common/: mod.rs
veil-landing/: .env.example  README.md  middleware.ts  next.config.ts  package-lock.json  package.json
(+148 files in other folders)
