[package]
name = "veil-lending"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[dependencies]
pinocchio        = { version = "0.11.1", features = ["cpi"] }
pinocchio-system = "0.6.0"
pinocchio-token  = "0.6.0"

[dev-dependencies]
# No external test deps needed — all tests use std and the crate itself.
